# ai-web3-school-cohort-0

./: .env.example  .gitignore  AGENTS.md  README.md  hermes-test.md  learning-plan.md  opencode.jsonc  profile.md  skills-lock.json
.claude/skills/: cobo-agentic-wallet-developer
.github/ISSUE_TEMPLATE/: bug.yml  design.yml  discovery.yml
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: guild-os-ci.yml
.opencode/plans/: e2e-agent-coordination.md
daily/: 2026-05-17.md  2026-05-18.md  2026-05-19.md  2026-05-20.md  2026-05-21.md  2026-05-22.md  2026-05-23.md  2026-05-24.md  2026-05-25.md  2026-05-26.md  2026-05-27.md  2026-05-28.md  2026-05-29.md  2026-05-30.md  2026-05-31.md  2026-06-01.md  2026-06-02.md  2026-06-03.md  2026-06-04.md  2026-06-05.md  2026-06-06.md  2026-06-07.md  2026-06-08.md  2026-06-09.md  2026-06-10.md  2026-06-11.md  2026-06-12.md
experiments/: CheckInManager.sol  README.md
experiments/a2a-coordination-loop/: README.md  a2a_test.py  pyproject.toml
experiments/a2a-eas-reputation-loop/: .env.example  .gitignore  CLAUDE.md  Product.md  README.md  RUN_LOG.md  Tech.md  package.json  pnpm-lock.yaml  tsconfig.json
experiments/afc-simple/: .env.example  .gitignore  afc_clawbank.py  pyproject.toml  summon_params.json
experiments/caw-afc-poc/: .env.example  .gitignore  README.md  caw_client.py  orchestrator.py  pact.py  pyproject.toml
hackathon/: OVERVIEW_REPORT.md  PROJECT_PROPOSAL.md  PROJECT_PROPOSAL_ANALYSIS_2.md  PROJECT_PROPOSAL_PRE_ANALYSIS.md  PROTOTYPING_RESOURCES.md  TRACK_SELECTION.md
hackathon/guild-os/: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  check_mcp.py  check_mcp2.py  guild_context.json  pyproject.toml  requirements.txt
hackathon/guild-os/.cursor/rules/: 7d-framework.mdc
hackathon/guild-os/.github/: copilot-instructions.md
hackathon/guild-os/.github/ISSUE_TEMPLATE/: definition.yml  design.yml
hackathon/guild-os/.github/workflows/: deploy.yml  diagnostics.yml
hackathon/guild-os/.windsurf/rules/: 7d-framework.md
hackathon/guild-os/assets/: erc8004_specialist_profile.json
hackathon/guild-os/config/: networks.json  pact.json
hackathon/guild-os/docs/: MVP_FLOW.md  PROBLEM.md  RISKS.md  TECH_STACK.md  TRACK.md  VALIDATION_PLAN.md
hackathon/guild-os/scripts/: agent-manifest.json  setup-agent-profile.sh  setup-github.sh
hackathon/guild-os/scripts/lib/: common.sh  harness-claude-code.sh  harness-hermes.sh  harness-openclaw.sh
hackathon/guild-os/skills/stylebook/: SKILL.md
hackathon/guild-os/specs/: 00-overview.md  10-technical-design.md  20-api-contracts.md  README.md
hackathon/guild-os/specs/scenarios/: 01_guild_formation.feature  02_talent_discovery.feature  03_quoting_and_terms.feature  04_membership.feature  05_task_delegation.feature  06_specialist_execution.feature  07_deliverable_attestation.feature  08_deliverable_review.feature  09_settlement.feature  10_reputation_feedback.feature  11_dispute_path.feature  12_scoped_spending.feature
hackathon/guild-os/src/cli/: gates.py  runner.py
hackathon/guild-os/src/guild/: server.py  tools.py
hackathon/guild-os/src/orchestrator/: a2a_server.py  server.py  tools.py
hackathon/guild-os/src/shared/: a2a.py  agentfightclub.py  erc8004.py  guild_context.py  network_config.py  onchain_hash.py  wallet.py
hackathon/guild-os/src/specialist/: a2a_client.py  agent.py
hackathon/guild-os/submissions/: tx_hashes.md
hackathon/guild-os/templates/: ISSUE_TICKET_TEMPLATE.md  TASK_EXECUTION_PROMPT.md
hackathon/guild-os/tests/: conftest.py  test_a2a.py  test_a2a_transport.py  test_deliverable_precheck.py  test_e2e_loop.py  test_erc8004.py  test_guild_formation.py  test_guild_tools.py  test_human_gates.py  test_mcp_server.py  test_membership.py  test_network_config.py  test_onchain_hash.py  test_orchestrator_a2a_server.py  test_runner.py  test_specialist_a2a_client.py  test_task_delegation.py  test_wallet_provider.py
hackathon/guild-os/tests/evaluations/: evaluation.py  orchestrator_eval.xml  run_server.py
hackathon/guild-os/tests/step_defs/: test_deliverable_attestation_steps.py  test_deliverable_review_steps.py  test_guild_formation_steps.py  test_membership_steps.py  test_quoting_and_terms_steps.py  test_scoped_spending_steps.py  test_talent_discovery_steps.py  test_task_delegation_steps.py
hackathon/notes/: DIRECTION_CARD.md  (+9 more)
knowledge-base/: README.md
logs/: LEARNING_AGENT_SETUP_EVIDENCE.md  LEARNING_COVERAGE_Week2.md  SKILLS_KB.md  TODOs.md  TOOLS.md  checkin_cache.json  quiz-cache.json  status_cache.json  tasks_upcoming_cache.json
prompts/: A2A_EAS_REPUTATION_LOOP.md  AGENTFIGHTCLUB_RESEARCH.md  BOOTSTRAP_LEARNING_AGENT.md  FOUNDATIONAL_DIRECTIONS_ANALYSIS.md  FRONTIER_RESEARCH_TEMPLATE.md  HERMES_CODING.md  HERMES_HARNESS_BUILDER.md  INTERACTIVE_LEARNING_ARTIFACT.md  ISSUE_CODING_SESSION.md  PROJECT_PROPOSAL.md  README.md
setup/: CASUAL_HACKATHON.md  README.md  WCB_TOOL.md
submissions/: CONCEPT_CARDS.md  README.md  TOOLS.md  Week1-Learning-Summary.md  Week1-PoW.md  Week2-PoW.md  Week3-PoW.md  concept-cards-ai-fundamentals.html  concept-cards-web3-fundamentals.html  concept-cards.html
tasks/: AIxWeb3-problem-map.html  AIxWeb3-problem-map.md  AIxWeb3_WORKFLOW.md  INDUSTRY_FOLLOW_LIST.md  LEARNING_ARTIFACT.md  PROBLEM_MAP_&_MAIN_DIRECTION_SELECTION.md  PROJECT_ANALYSIS_REPORT.md  README.md  RESTRICTED_WEB3_ASSISTANT_WORKFLOW.md  SMART_CONTRACT.md  TESTNET_TX.md  WALLET_COMPARISON.md  agentic-commerce-workflow.html  agentic-commerce-workflow.mermaid
templates/: daily-note.md  task-note.md
tools/: casual_hackathon_client.py  wcb_client.py
(+388 files in other folders)
