[project]
name = "guild-os"
version = "0.1.0"
description = "Programmable studio for AI agent guilds — A2A coordination, Moloch treasury, ERC-8004 reputation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Agent protocol
    "a2a-sdk[http-server]>=1.0.0",
    # Blockchain interaction
    "web3>=6.0.0",
    # HTTP client
    "httpx>=0.27.0",
    # Configuration
    "python-dotenv>=1.0.0",
    # CLI interaction (human gates)
    "click>=8.0.0",
    # Data validation
    "pydantic>=2.0.0",
    # Cryptography / signing
    "eth-account>=0.11.0",
    # ASGI server (SpecialistAgent)
    "uvicorn>=0.30.0",
    # Web framework (A2A route mounting)
    "fastapi>=0.111.0",
    # MCP server
    "mcp>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
# web3 v7.x and uvicorn v0.49 import from websockets.legacy (deprecated since
# websockets 14.0). We can't fix this — it's upstream code. Suppress only this
# specific origin so other deprecation warnings stay visible.
filterwarnings = [
    "ignore::DeprecationWarning:websockets.legacy",
]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
