[project]
name = "guild-os"
version = "0.1.0"
description = "Programmable studio for AI agent guilds — A2A coordination, Moloch treasury, ERC-8004 reputation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Agent protocol
    "a2a-sdk[http-server]>=1.0.0",
    # Blockchain interaction
    "web3>=6.0.0",
    # HTTP client
    "httpx>=0.27.0",
    # Configuration
    "python-dotenv>=1.0.0",
    # CLI interaction (human gates)
    "click>=8.0.0",
    # Data validation
    "pydantic>=2.0.0",
    # Cryptography / signing
    "eth-account>=0.11.0",
    # Wallet provider — Cobo Agentic Wallet (CAW) for scoped TSS signing
    "cobo-agentic-wallet>=0.1.0",
    # ASGI server (SpecialistAgent)
    "uvicorn>=0.30.0",
    # Web framework (A2A route mounting)
    "fastapi>=0.111.0",
    # MCP server
    "mcp>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "openai>=1.0.0",
    "pytest-bdd>=8.1.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
# .feature files stay in specs/scenarios/ — the canonical SDD source — and
# load directly from there via pytest-bdd; never copied/duplicated into tests/.
bdd_features_base_dir = "specs/scenarios/"
# web3 v7.x and uvicorn v0.49 import from websockets.legacy (deprecated since
# websockets 14.0). We can't fix this — it's upstream code. Suppress only this
# specific origin so other deprecation warnings stay visible.
#
# a2a-sdk 1.1.0's proto_utils.py reads the deprecated protobuf
# FieldDescriptor.label instead of is_required()/is_repeated() (tracked
# upstream: https://github.com/a2aproject/a2a-python/issues/1011). Not
# fixable in this repo — every frame is inside the SDK. Suppress only this
# origin so other deprecation warnings stay visible.
filterwarnings = [
    "ignore::DeprecationWarning:websockets.legacy",
    "ignore::DeprecationWarning:a2a.utils.proto_utils",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# Default (E4, E7, E9, F) plus:
#   I — import sorting (future -> stdlib -> local, per skills/stylebook/SKILL.md)
#   G — logging format (lazy %-style args in logger calls, never f-strings)
# These two mechanically enforce conventions documented in
# skills/stylebook/SKILL.md; ruff is the enforcer for anything it CAN
# check, the stylebook covers what it can't.
extend-select = ["I", "G"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
